<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mymodule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/mod"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/c203"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/c203"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Button" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        tools:srcCompat="@tools:sample/avatars" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/c206"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/c206"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="Button" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/c218"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:text="@string/c218" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/c235"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:text="@string/c235" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/c346"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:text="@string/c346" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/android" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>